# sid

./: CMakeLists.txt  Makefile
cmake/: sid_testsuite.cmake
examples/: CMakeLists.txt  example0.cpp
libs/bio/: CMakeLists.txt
libs/bio/include/sid/bio/: basic_buffer.hpp  buffer.hpp
libs/bio/samples/: CMakeLists.txt
libs/bio/src/: bio.cpp
libs/bio/tests/: CMakeLists.txt  basic_buffer.cpp
libs/net/: CMakeLists.txt
libs/net/include/sid/net/: basic_socket.hpp  error.hpp  socket.hpp
libs/net/include/sid/net/bsd/: socket_impl.hpp
libs/net/samples/: CMakeLists.txt  socket.cpp
libs/net/src/: error.cpp
libs/net/src/bsd/: socket_impl.cpp
libs/net/tests/: CMakeLists.txt
libs/prelude/: CMakeLists.txt
libs/prelude/include/sid/: assert.hpp  iseq.hpp  tseq.hpp
libs/prelude/include/sid/dbg/: assert_stmt.hpp  check_stmt.hpp
libs/prelude/tests/: CMakeLists.txt  mt.cpp
